Add client dependency
Update config

Create unit test

Change common router to vaccine router

Create vaccine router group

Add vaccine to restrict path

Create vaccine dto

Create vaccine client

Remove unused test

Implement vaccine handler and service

Remove unused method

Register service

Update docs
